@@ -9,7 +9,7 @@ The current features are:
   export, import, lock, log, move, properties, relocate, resolved, revert,
   status, switch, unlock, update.
 - Subversion info in file properties dialog.
-- Limmited git support: add, branch, clone, log, reset, stash, status.
+- Limmited git support: add, blame, branch, clone, log, reset, stash, status.
 
 
 Usage
