@@ -47,6 +47,8 @@ TghOutputParser* tgh_branch_parser_new     (GtkWidget *);
 TghOutputParser* tgh_stash_list_parser_new (GtkWidget *);
 TghOutputParser* tgh_stash_show_parser_new (GtkWidget *);
 
+TghOutputParser* tgh_blame_parser_new      (GtkWidget *);
+
 gboolean tgh_parse_output_func  (GIOChannel *, GIOCondition, gpointer);
 
 G_END_DECLS
